<resources>
    <string name="app_name">ReferenceApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="social_login">Social Login</string>
    <string name="facebook">Facebook</string>
    <string name="linked">Linked</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="tai_lieu_noi_bat">Tài liệu nổi bật</string>
    <string name="banner">Banner</string>
    <string name="picture">Picture</string>
    <string name="lesson">Lesson</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="school">School</string>
    <string name="member">Member</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="avatar_preview">Avatar Preview</string>
    <string name="notification">Notification</string>
    <string name="what_documents_are_you_looking_for">What documents are you looking for?</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="slider">slider</string>
    <string name="detail">Detail</string>
    <string name="back">back</string>
    <string name="like">like</string>
    <string name="title">Title</string>
    <string name="money">Money</string>
    <string name="rating">Rating</string>
    <string name="time">Time</string>
    <string name="details">Details</string>
    <string name="cart">Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="check_out">Check out</string>
    <string name="name">name</string>
    <string name="role">role</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favourites">Favourites</string>
    <string name="Documents">Documents</string>
    <string name="upload_document">Upload Document</string>
    <string name="logout">Logout</string>
    <string name="category">category</string>
</resources>