<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form"
    tools:context=".activity.RegisterActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/backRegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/red"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:hint="@string/first_name"
        android:layout_below="@+id/formLogin"
        android:id="@+id/firstName"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:id="@+id/lastName"
        android:layout_below="@id/firstName"
        android:autofillHints=""
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:id="@+id/phone"
        android:layout_below="@id/lastName"
        android:autofillHints=""
        android:inputType="phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:id="@+id/email"
        android:layout_below="@id/phone"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:layout_below="@id/email"
        android:id="@+id/password"
        android:autofillHints=""
        android:inputType="textPassword" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/school"
        android:id="@+id/school"
        android:layout_below="@id/password"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/member"
        android:id="@+id/member"
        android:layout_below="@id/school"
        android:autofillHints=""
        android:inputType="text" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_below="@id/member"-->
<!--        >-->
<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="50dp"-->
<!--            android:text="@string/choose_avatar"-->
<!--            android:id="@+id/chooseAvatar" />-->

<!--        <ImageView-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:id="@+id/avatarPreview"-->
<!--            android:background="@drawable/rounded_corner"-->
<!--            android:contentDescription="@string/avatar_preview" />-->
<!--    </LinearLayout>-->
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/member"
        android:text="@string/register"
        android:id="@+id/register"/>

</RelativeLayout>