<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/backLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:layout_marginBottom="60dp"
        android:textColor="@color/red"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formLogin"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_form"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:layout_below="@id/email"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/dark_blue"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login" />

    <!-- ProgressBar thêm vào layout, ẩn khi chưa sử dụng -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>