<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/backProfileBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="center"
                    android:background="@drawable/rounded_corner"
                    android:contentDescription="@string/profile"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/nameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="90dp"
                        android:text="@string/name"
                        android:textColor="@color/dark_blue"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/emailTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/email"
                        android:textColor="@color/dark_blue"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="@+id/nameTxt"
                        app:layout_constraintTop_toBottomOf="@+id/nameTxt"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/roleTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/role"
                        android:textColor="@color/dark_blue"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/emailTxt"
                        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

                    <Button
                        android:id="@+id/btnEditProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="#2f89ff"
                        android:text="@string/edit_profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutFavourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:ignore="MissingConstraints,RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/heartnotbg" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/favourites"
                android:textColor="@color/dark_blue"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/profile"
                android:gravity="right"
                app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDocuments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutFavourites"
            tools:ignore="MissingConstraints,RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/documents" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Documents"
                android:textColor="@color/dark_blue"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/profile"
                android:gravity="right"
                app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutUpdateDocuments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutDocuments"
            tools:ignore="MissingConstraints,RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/baseline_file_download_24" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/upload_document"
                android:textColor="@color/dark_blue"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/profile"
                android:gravity="right"
                app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        android:backgroundTint="#2f89ff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>